wxc/include/ewxw/wxc_glue.h

TClass(wxMDIChildFrame) wxMDIChildFrame_Create( TClass(wxWindow) _prt, int _id, TString _txt, TRect(_lft,_top,_wdt,_hgt), int _stl );
/* wxMDIClientWindow */
TClassDefExtend(wxMDIClientWindow,wxWindow)

/* wxMDIParentFrame */
TClassDefExtend(wxMDIParentFrame,wxFrame)
void       wxMDIParentFrame_ActivateNext( TSelf(wxMDIParentFrame) _obj );
void       wxMDIParentFrame_ActivatePrevious( TSelf(wxMDIParentFrame) _obj );
void       wxMDIParentFrame_ArrangeIcons( TSelf(wxMDIParentFrame) _obj );
void       wxMDIParentFrame_Cascade( TSelf(wxMDIParentFrame) _obj );
TClass(wxMDIParentFrame)  wxMDIParentFrame_Create( TClass(wxWindow) _prt, int _id, TString _txt, TRect(_lft,_top,_wdt,_hgt), int _stl );
TClass(wxMDIChildFrame)   wxMDIParentFrame_GetActiveChild( TSelf(wxMDIParentFrame) _obj );
TClass(wxMDIClientWindow) wxMDIParentFrame_GetClientWindow( TSelf(wxMDIParentFrame) _obj );
TClass(wxMenu)            wxMDIParentFrame_GetWindowMenu( TSelf(wxMDIParentFrame) _obj );
TClass(wxMDIClientWindow) wxMDIParentFrame_OnCreateClient( TSelf(wxMDIParentFrame) _obj );
void       wxMDIParentFrame_SetWindowMenu( TSelf(wxMDIParentFrame) _obj, TClass(wxMenu) menu );
void       wxMDIParentFrame_Tile( TSelf(wxMDIParentFrame) _obj );